Implement user authentication and enhance UI components

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+# Copy this file to .env and fill in your values.
+# NEVER commit .env — it contains secrets. .env is in .gitignore.
+
 # Supabase (get these from https://supabase.com/dashboard/project/_/settings/api)
 EXPO_PUBLIC_SUPABASE_URL=https://your-project-ref.supabase.co
 EXPO_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
@@ -7,6 +10,7 @@ EXPO_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
 # EXPO_PUBLIC_DEMO_MODE=true
 
 # For setup-demo-supabase.js (Dashboard > Settings > API > service_role)
+# DO NOT commit real keys. Copy to .env only.
 # SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
 
 # For migrations and demo seed (Dashboard > Settings > Database > Connection string > URI)
