--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "setup:demo": "node scripts/setup-demo-supabase.js"
+    "setup:demo": "node scripts/setup-demo-supabase.js",
+    "migrate:onboarding": "node scripts/add-onboarding-column.js",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-native-community/datetimepicker": "^8.6.0",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/bottom-tabs": "^7.12.0",
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.12.0",
@@ -31,17 +33,19 @@
     "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-gesture-handler": "^2.30.0",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "^5.4.0",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "4.16.0",
     "react-native-url-polyfill": "^3.0.0",
-    "react-native-worklets": "^0.7.2",
+    "react-native-worklets": "0.5.1",
     "react-native-worklets-core": "^1.6.2"
   },
   "private": true,
   "devDependencies": {
     "dotenv": "^17.2.4",
+    "eslint": "^9.39.2",
+    "eslint-config-expo": "^10.0.0",
     "pg": "^8.18.0",
     "prettier-plugin-tailwindcss": "^0.7.2",
     "tailwindcss": "^3.4.19"
