--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "private": true,
   "devDependencies": {
+    "@expo/ngrok": "^4.1.3",
     "dotenv": "^17.2.4",
     "eslint": "^9.39.2",
     "eslint-config-expo": "^10.0.0",
